--- a/categoryProducts.html
+++ b/categoryProducts.html
@@ -411,8 +411,6 @@ async function runDeliveryCalc(){
   if(!vehicle){
     box.style.display = "none";
     lastDeliveryCharge = 0;
-    currentRetailerLoc = null;
-    currentWholesalerLoc = null;
     return;
   }
 
@@ -426,12 +424,7 @@ async function runDeliveryCalc(){
     retailerProfile.location ||
     null;
 
-  if(retailerLoc?.latitude && retailerLoc?.longitude){
-    retailerLoc = {
-      lat: Number(retailerLoc.latitude),
-      lng: Number(retailerLoc.longitude)
-    };
-  }
+  retailerLoc = normalizeLocation(retailerLoc);
 
   /* ================= WHOLESALER LOCATION ================= */
 
@@ -441,6 +434,7 @@ async function runDeliveryCalc(){
     const resWh = await fetch(
       `${API}/api/wholesalers/profile/${selectedProduct.wholesalerId}`
     );
+
     const whData = await resWh.json();
 
     wholesalerLoc =
@@ -449,41 +443,31 @@ async function runDeliveryCalc(){
       whData?.location ||
       null;
 
-    if(wholesalerLoc?.latitude && wholesalerLoc?.longitude){
-      wholesalerLoc = {
-        lat: Number(wholesalerLoc.latitude),
-        lng: Number(wholesalerLoc.longitude)
-      };
-    }
+    wholesalerLoc = normalizeLocation(wholesalerLoc);
+
+    console.log("🏪 LIVE Wholesaler Location:", wholesalerLoc);
 
   }catch(err){
     console.error("❌ Wholesaler location fetch failed", err);
   }
 
-  /* ================= VALIDATION ================= */
+  /* ================= LOCATION VALIDATION ================= */
 
-  if(
-    !retailerLoc?.lat ||
-    !retailerLoc?.lng ||
-    !wholesalerLoc?.lat ||
-    !wholesalerLoc?.lng
-  ){
+  if(!retailerLoc || !wholesalerLoc){
     box.style.display = "block";
     dText.innerText = "📍 Location missing";
     tText.innerText = "";
     lastDeliveryCharge = 0;
 
-    currentRetailerLoc = null;
-    currentWholesalerLoc = null;
+    console.warn("⚠️ Location check failed", {
+      retailerLoc,
+      wholesalerLoc
+    });
 
     return;
   }
 
-  /* 🔥 IMPORTANT — SET GLOBALS HERE */
-  currentRetailerLoc = retailerLoc;
-  currentWholesalerLoc = wholesalerLoc;
-
-  /* ================= DELIVERY API ================= */
+  /* ================= DELIVERY CALCULATION ================= */
 
   try{
     const res = await fetch(`${API}/api/delivery/calculate`,{
@@ -499,13 +483,17 @@ async function runDeliveryCalc(){
 
     const data = await res.json();
 
+    console.log("🚚 Delivery API Response:", data);
+
     if(!data.success){
       box.style.display = "block";
-      dText.innerText = "❌ Delivery calculation failed";
+      dText.innerText = "❌ " + (data.error || "Delivery calculation failed");
       tText.innerText = "";
       lastDeliveryCharge = 0;
       return;
     }
+
+    /* ================= SUCCESS ================= */
 
     lastDeliveryCharge = Number(data.retailerPays);
 
